# supervisions

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: auth.py  database.py  main.py  models.py  schemas.py  services.py
app/routers/: auth.py  cohorts.py  dashboard.py  deadlines.py  events.py  faculty.py  import_export.py  lattes.py  publications.py  students.py
app/static/: app.js  styles.css
app/templates/: index.html
scripts/: import_legacy.py
src/supervisions/: auth.py  main.py  supervision_requests.py  user_control.py  user_store.py  web.py
src/supervisions.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/supervisions/templates/: dashboard.html  landing.html  login.html
tests/: test_login_page.py  test_rules.py  test_smoke.py
