[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "supervisions"
version = "0.1.0"
description = "Fresh minimal scaffold for a Python project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"Flask>=3.0,<4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
supervisions = ["templates/*.html"]
